--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -6,5 +6,37 @@
 </head>
 <body>
     <h1>Chicken Curry</h1>
+    <img src="images/chicken-curry.jpeg" alt="Chicken curry with rice">
+    <h2>Recipe Description</h2>
+    <p>Spicy Chicken Curry, both national dishes of Pakistan and England!</p>
+    <p>I hope this recipe is useful for you guys reading :)</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 tbsp sunflower oil</li>
+        <li>1 onion, thinly sliced</li>
+        <li>2 garlic cloves, crushed</li>
+        <li>thumb-sized piece of ginger, grated</li>
+        <li>6 chicken thighs, boneless and skinless</li>
+        <li>Spice, tomoatoes, yoghurt coriander, almonts, rice....</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>
+            Heat the oil in a flameproof casserole dish or large frying pan 
+            over a medium heat. Add the onion and a generous pinch of salt 
+            and fry for 8-10 mins, or until the onion has turned golden brown
+            and sticky. Add the garlic and ginger, cooking for a further minute.
+        </li>
+        <li>
+        Chop the chicken into chunky 3cm pieces, add to the pan and fry for
+        5 mins before stirring through the spice paste and tomatoes, along with
+        250ml water. Bring to the boil, lower to a simmer and cook on a gentle
+        heat uncovered for 25-30 mins or until rich and slightly reduced. Stir
+        though the yogurt, coriander and ground almonds, season and serve with 
+        warm naan or fluffy basmati rice.
+        </li>
+    </ol>
 </body>
 </html>
