--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken-curry.html">Chicken Curry Recipe</a>
+    <ul>
+        <li><a href="recipes/chicken-curry.html">Chicken Curry Recipe</a></li>
+        <li><a href="recipes/pancakes.html">Pancake Recipe</a></li>
+    </ul>  
 </body>
 </html>
