--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Curry Recipe</title>
 </head>
 <body>
     <h1>Chicken Curry</h1>
     <img src="images/chicken-curry.jpeg" alt="Chicken curry with rice">
-    <h2>Recipe Description</h2>
+    <h2>Dish Description</h2>
     <p>Spicy Chicken Curry, both national dishes of Pakistan and England!</p>
-    <p>I hope this recipe is useful for you guys reading :)</p>
+    <p>I hope this recipe is useful for those reading.</p>
 
     <h2>Ingredients</h2>
     <ul>
